cmake_minimum_required(VERSION 2.8.3)
project(trees C CXX)
add_definitions(-g -DDEBUG)
add_executable(simplebTree simplebTree.h simplebTree.cc)
add_executable(levelOrder simplebTree.h  levelOrderTraversal.cc)
add_executable(maxElement simplebTree.h  maxElement.cc)
add_executable(maxElementRecur simplebTree.h  maxElementRecur.cc)
add_executable(findElementRecur simplebTree.h  findElementRecur.cc)
add_executable(findElement simplebTree.h  findElement.cc)
add_executable(sizeOfTreeRecur simplebTree.h  sizeOfTreeRecur.cc)
add_executable(sizeOfTree simplebTree.h  sizeofTree.cc)
add_executable(reverseLevelPrint simplebTree.h  reverseLevelPrint.cc)
add_executable(heightOfTreeRecur simplebTree.h  heightOfTreeRecur.cc)
add_executable(heightOfTree simplebTree.h  heightOfTree.cc)
add_executable(deepestNode simplebTree.h  deepestNode.cc)
add_executable(countLeaves simplebTree.h  countLeaves.cc)
add_executable(fullNodes simplebTree.h  fullNodes.cc)
add_executable(identicalTrees simplebTree.h  identicalTrees.cc)
add_executable(maxSumLevel simplebTree.h  maxSumLevel.cc)
add_executable(printPaths simplebTree.h  printPaths.cc)
add_executable(hasPathSum simplebTree.h  hasPathSum.cc)
add_executable(mirrorTree simplebTree.h  mirrorTree.cc)
add_executable(lcaOfNodes simplebTree.h  lcaOfNodes.cc)
add_executable(zigZagTraversal simplebTree.h  zigZagTraversal.cc)
add_executable(verticalSum simplebTree.h verticalSum.cc)
add_executable(DLLReverse DLLReverse.cc)
add_executable(LRUDriver LRUDriver.cc)